# vastai-skill

./: README.md  pyproject.toml
skills/vastai-gpu/: SKILL.md
src/vastai_connect/: __init__.py  cli.py  instance.py  onstart.sh
